--- a/app/src/main/res/layout/activity_tanya_ustad.xml
+++ b/app/src/main/res/layout/activity_tanya_ustad.xml
@@ -44,7 +44,7 @@
                 style="@style/TextAppearance.App.TitleMedium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tanya Pak Ustadz"
+                android:text="Tanya Pak Ustadz !!!"
                 android:textColor="@color/black"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -58,25 +58,27 @@
         android:padding="16dp">
 
         <LinearLayout
+            android:id="@+id/llChatContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/tvResult"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:background="@drawable/rounded_background_light_gray"
-                android:justificationMode="inter_word"
-                android:minHeight="100dp"
-                android:padding="12dp"
-                android:text="Selamat datang! Silakan ajukan pertanyaan Anda..."
-                android:textColor="@android:color/black"
-                android:textSize="16sp" />
+                android:id="@+id/tvInitialWelcome"
+                android:layout_width="wrap_content"
+                android:layout_height="1dp"
+                android:layout_gravity="start" />
 
         </LinearLayout>
     </ScrollView>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:visibility="gone"
+        android:layout_marginBottom="8dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -96,7 +98,7 @@
             android:layout_weight="1"
             android:background="@drawable/rounded_border_gray"
             android:hint="   Tanya Pak Ustadz..."
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:inputType="textMultiLine"
             android:maxLines="4"
             android:minHeight="40dp"
